kube/identity-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-deployment
  namespace: ynov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: misterleo0/identity.api:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: identity-service
  namespace: ynov
spec:
  selector:
    app: identity
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
