kube/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: ynov
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: misterleo0/redis:latest
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: "4m"
              memory: "500Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: ynov
spec:
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
